# m365-copilot-sales-dashboard-mcp

./: .gitignore  LICENSE  README.md  m365agents.yml
appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json
docs/: DESIGN_GUIDE.md  GUIDE.md
env/: .env.dev
server/: pyproject.toml
server/sales_mcp/: __init__.py  analytics.py  data.py  server.py  settings.py  tools.py
server/scripts/: gen_ai_plugin.py  make_icons.py  smoke_test.py
widgets/: build.mjs  package-lock.json  package.json  vite.config.ts
widgets/src/: App.tsx  devMock.ts  format.ts  index.html  main.tsx  theme.ts  types.ts
widgets/src/components/: rows.tsx  ui.tsx
widgets/src/mcp/: FluentWrapper.tsx  McpBridge.tsx
widgets/src/views/: Dashboard.tsx  DealDetail.tsx  DealsList.tsx  RepDetail.tsx
