[project]
name = "sales-dashboard-mcp"
version = "0.1.0"
description = "Sales dashboard MCP Apps server (data services + rich UI) for Microsoft 365 Copilot declarative agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.26.0",
    "uvicorn>=0.29",
    "starlette>=0.37",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
sales-dashboard-mcp = "sales_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sales_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"sales_mcp/web/widget.html" = "sales_mcp/web/widget.html"
